--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -46,6 +46,10 @@ a{text-decoration: none;}
 .hidden {overflow: hidden;}
 .none {display: none;}
 
+/*postion*/ 
+.mt50{
+  margin-top: 40px;
+}
 /*grid system*/ 
 *,
 *:before,
