--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -28,3 +28,44 @@ header .header-item.logo img
 
 .hb
 	border-right 1px dotted #000000
+
+.fb
+	border-right 1px dotted #ffffff
+
+.main .wrap
+	width 95%
+	margin 0 auto
+
+.lineBox li
+	border-top 5px solid #000000
+	padding-top 4px
+	margin-bottom 8px
+
+.lineBox li .boxWrapper
+	border-top 1px solid #000000
+	padding-top 4px
+
+footer
+	background #2d2d2d
+	overflow hidden
+	color #ffffff
+	padding 10px 0
+
+.footer-nav
+	width 90%
+	margin 0 auto
+	padding-bottom 10px
+	overflow hidden
+
+.footer-item
+	width 33.333333333333%
+	float left
+
+.footer-item a
+	display block
+	width 100%
+	color #ffffff
+
+
+
+
