--- a/stylus/page.styl
+++ b/stylus/page.styl
@@ -1,7 +1,26 @@
 // home page
 .main
-	padding-top 38px
+	padding-top 35px
+	margin-bottom 10px
+
+.brand-des
+	margin-bottom 10px
 
 .brand-des img
 	width 100%
 	height auto
+
+.homepage.boxWrapper img
+	height 120px
+	width auto
+
+.homepage.boxWrapper
+	overflow hidden
+
+.homepage.boxWrapper a 
+	display block
+	overflow hidden
+	color #000000
+
+.homepage.boxWrapper a div
+	width 90px
