--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -50,6 +50,12 @@ a{text-decoration: none;}
 .mt50{
   margin-top: 40px;
 }
+.mb20{
+  margin-bottom: 20px;
+}
+.pb10{
+  padding-bottom: 10px;
+}
 /*grid system*/ 
 *,
 *:before,
