--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -1,6 +1,7 @@
 /*header*/ 
 header
 	position fixed
+	z-index 1
 	width 100%
 	background #ffffff
 
@@ -31,6 +32,9 @@ header .header-item.logo img
 
 .fb
 	border-right 1px dotted #ffffff
+
+.bb1
+	border-bottom 1px solid #ACACAC
 
 .main .wrap
 	width 95%
@@ -66,6 +70,30 @@ footer
 	width 100%
 	color #ffffff
 
+.productWrapper
+	width 130px
+	height 250px
+	margin 0 auto
+	border-top 5px solid #000000
+	border-bottom 1px solid #000000
+	padding-top 4px
+	padding-bottom 5px
+	margin-bottom 15px
+
+.productWrapper a
+	display block
+	color #000000
+
+.productWrapper img
+	width 100%
+
+.productWrapper p
+	color #ACACAC
+	padding-bottom 10px
+
+.productItem
+	border-top 1px solid #000000
+	padding-top 5px
 
 
 
