--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -95,5 +95,33 @@ footer
 	border-top 1px solid #000000
 	padding-top 5px
 
+button,
+input
+	-webkit-appearance none
+	outline none
+
+input
+	width 100%
+	border 1px solid #000000
+	border-radius 0px
+	padding 10px
+	font-size 16px
+	color #ACACAC
+
+button
+	// width 200px
+	display block
+	background #00c3bc
+	border 0px
+	font-size 16px
+	padding 4px
+	margin 0 auto
+	color #ffffff
+
+.innerButton
+	border 1px solid #ffffff
+	padding 10px
+
+
 
 
