add single-product page sample

--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -47,17 +47,33 @@ a{text-decoration: none;}
 .none {display: none;}
 
 /*postion*/ 
+.b1{
+  border: 1px solid #000;
+}
+.b2{
+  border-left: 0px solid #fff;
+  border-right: 0px solid #fff;
+}
+.mt10{
+  margin-top: 10px;
+}
 .mt20{
   margin-top: 20px;
 }
 .mt50{
   margin-top: 40px;
 }
+.mb10{
+  margin-bottom: 10px;
+}
 .mb20{
   margin-bottom: 20px;
 }
 .pb10{
   padding-bottom: 10px;
+}
+.pb20{
+  padding-bottom: 20px;
 }
 /*grid system*/ 
 *,
