--- a/css/style.css
+++ b/css/style.css
@@ -172,17 +172,33 @@ a {
 .none {
   display: none;
 }
+.b1 {
+  border: 1px solid #000;
+}
+.b2 {
+  border-left: 0px solid #fff;
+  border-right: 0px solid #fff;
+}
+.mt10 {
+  margin-top: 10px;
+}
 .mt20 {
   margin-top: 20px;
 }
 .mt50 {
   margin-top: 40px;
 }
+.mb10 {
+  margin-bottom: 10px;
+}
 .mb20 {
   margin-bottom: 20px;
 }
 .pb10 {
   padding-bottom: 10px;
+}
+.pb20 {
+  padding-bottom: 20px;
 }
 *,
 *:before,
@@ -276,7 +292,7 @@ a {
 }
 header {
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   width: 100%;
   background: #fff;
 }
@@ -391,10 +407,26 @@ button {
   padding: 4px;
   margin: 0 auto;
   color: #fff;
+  font-size: 12px;
 }
 .innerButton {
   border: 1px solid #fff;
   padding: 10px;
+}
+ul.det {
+  overflow: hidden;
+}
+ul.det li {
+  display: inline-block;
+  float: left;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  border: 1px solid #000;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
 .main {
   padding-top: 35px;
@@ -428,4 +460,40 @@ button {
 }
 .products .innerButton {
   width: 200px;
+}
+.productName {
+  margin-bottom: 10px;
+}
+.swiper-container img {
+  width: 180px;
+  margin: 15px auto;
+  display: block;
+}
+.single .wrap {
+  width: 85%;
+}
+.single span.title {
+  font-size: 12px;
+  color: #8c8c8c;
+  margin-bottom: 10px;
+}
+.productDet span.title {
+  margin-bottom: 20px;
+}
+.productQua .row {
+  width: 150px;
+}
+.productQua div {
+  height: 100%;
+  text-align: center;
+  line-height: 50px;
+}
+.productQua div input {
+  border: 0px;
+}
+.checkoutBtns button {
+  width: 95%;
+}
+.checkoutBtns .addToCart {
+  background: #2d2d2d;
 }
