--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -1,7 +1,7 @@
 /*header*/ 
 header
 	position fixed
-	z-index 1
+	z-index 9999
 	width 100%
 	background #ffffff
 
@@ -117,11 +117,26 @@ button
 	padding 4px
 	margin 0 auto
 	color #ffffff
+	font-size 12px
 
 .innerButton
 	border 1px solid #ffffff
 	padding 10px
 
+ul.det
+	overflow hidden
+
+ul.det li
+	display inline-block
+	float left
+	width 50px
+	height 50px
+	text-align center
+	line-height 50px
+	border 1px solid #000
+	margin-right 10px
+	margin-bottom 10px
+	font-size 12px
 
 
 
