--- a/stylus/page.styl
+++ b/stylus/page.styl
@@ -31,3 +31,41 @@
 
 .products .innerButton
 	width 200px
+
+.productName
+	margin-bottom 10px
+
+.swiper-container img
+	width 180px
+	margin 15px auto
+	display block
+
+.single .wrap
+	width 85%
+
+.single span.title
+	font-size 12px
+	color #8c8c8c
+	margin-bottom 10px
+
+.productDet span.title
+	margin-bottom 20px
+
+.productQua .row
+	width 150px
+
+.productQua div
+	// width 100%
+	height 100%
+	text-align center
+	line-height 50px
+	// border 1px solid #000
+
+.productQua div input
+	border 0px
+	
+.checkoutBtns button
+	width 95%
+
+.checkoutBtns .addToCart
+	background #2d2d2d
