--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -138,5 +138,12 @@ ul.det li
 	margin-bottom 10px
 	font-size 12px
 
+button.delete
+	float left
+	font-size 12px
+	background #c2c2c2
+	width 20px
+	// height 20px
+	// line-height 20px
 
 
