--- a/stylus/page.styl
+++ b/stylus/page.styl
@@ -63,9 +63,47 @@
 
 .productQua div input
 	border 0px
-	
+
 .checkoutBtns button
 	width 95%
 
 .checkoutBtns .addToCart
 	background #2d2d2d
+
+/**********************cart****************************/
+.cart .boxWrapper
+	overflow hidden
+	img
+		float left
+		width 130px
+		height auto
+	.cartDes
+		margin-left 140px
+		margin-top 25px
+		font-size 12px
+		p
+			color #8c8c8c
+			span
+				color #000
+.cart .cartFtn
+		margin 10px 0px 30px
+		overflow hidden
+		padding 5px 10px
+		width 100%
+		border 1px solid #000
+		.cartSinglePri
+			float right
+
+.cartTotalPri
+	border-top 4px solid #000
+	padding-top 4px
+	.subtotal
+		border-top 1px solid #000
+		text-align center
+		padding 30px 0
+		p
+			color #8c8c8c
+			span
+				color #000
+	button
+		width 50%
