add shipping and address page

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,15 @@ button.delete {
   background: #c2c2c2;
   width: 20px;
 }
+select {
+  -webkit-appearance: none;
+  width: 100%;
+  border-radius: 0px;
+  outline: none;
+  padding: 10px 20px 10px 10px;
+  border: 1px solid #000;
+  color: #8c8c8c;
+}
 .main {
   padding-top: 35px;
   margin-bottom: 10px;
@@ -552,4 +561,20 @@ button.delete {
 }
 .cartTotalPri button {
   width: 50%;
+}
+.clinetInfo {
+  border-top: 4px solid #000;
+  padding-top: 4px;
+}
+.clinetInfo .clinetInfoWrap {
+  border-top: 1px solid #000;
+  padding: 10px 0px 0px;
+}
+.clinetInfo .clinetInfoWrap .clinet {
+  border: 1px solid #000;
+  padding: 10px 20px 10px 10px;
+  font-size: 12px;
+}
+.howPay {
+  margin: 10px 0px;
 }
