--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -146,4 +146,11 @@ button.delete
 	// height 20px
 	// line-height 20px
 
-
+select
+	-webkit-appearance none
+	width 100%
+	border-radius 0px
+	outline none
+	padding 10px 20px 10px 10px
+	border 1px solid #000
+	color #8c8c8c
