--- a/stylus/page.styl
+++ b/stylus/page.styl
@@ -107,3 +107,18 @@
 				color #000
 	button
 		width 50%
+
+/******************shipping&cart*********************/
+
+.clinetInfo
+	border-top 4px solid #000
+	padding-top 4px
+	.clinetInfoWrap
+		border-top 1px solid #000
+		padding 10px 0px 0px
+		.clinet
+			border 1px solid #000
+			padding 10px 20px 10px 10px
+			font-size 12px
+.howPay
+	margin 10px 0px
