--- a/stylus/common.styl
+++ b/stylus/common.styl
@@ -154,3 +154,11 @@ select
 	padding 10px 20px 10px 10px
 	border 1px solid #000
 	color #8c8c8c
+
+.det .selected
+	color #ffffff
+	border 0px solid #00c3bc
+	background #00c3bc
+
+.hidden
+	display none;
